Cant clear temp fluid cache after closing Blender #45375

Closed
opened 2015-07-08 10:33:25 +02:00 by Aleksandr · 9 comments

System Information
Operating system and graphics card
Windows 8.1 (64), NVIDIA GeForce GTX 560 Ti Gainward

Blender Version
Worked: 2.74
Broken: 2.75

Short description of error
When i used quick effect - quick fluid on standard cube and close program i see this.

P.S Can't upload file bcs in Chrome 43.0.2357.132 m (64-bit) this area do not active. -_-' https://youtu.be/_chrn78JNco

Exact steps for others to reproduce the error

  1. add a quick effect on the default cube that requires caching E.G. Fluid
  2. Bake
  3. Close Blender
**System Information** Operating system and graphics card Windows 8.1 (64), NVIDIA GeForce GTX 560 Ti Gainward **Blender Version** Worked: 2.74 Broken: 2.75 **Short description of error** When i used quick effect - quick fluid on standard cube and close program i see this. P.S Can't upload file bcs in Chrome 43.0.2357.132 m (64-bit) this area do not active. -_-' https://youtu.be/_chrn78JNco **Exact steps for others to reproduce the error** 1. add a quick effect on the default cube that requires caching E.G. Fluid 2. Bake 3. Close Blender
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @RedYellow

Added subscriber: @RedYellow
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

I can Confirm

I get this error message repeated

Unable to remove directoryC:\Users\Aaron\AppData\Local\Temp\blender_a10544\cache_fluid........................................................................................................................................................................................................ non-existent directory
I can Confirm I get this error message repeated ``` Unable to remove directoryC:\Users\Aaron\AppData\Local\Temp\blender_a10544\cache_fluid........................................................................................................................................................................................................ non-existent directory ```
Aaron Carlisle self-assigned this 2015-07-08 19:04:30 +02:00
Aaron Carlisle changed title from Quick effects to Cant clear cache after closing Blender 2015-07-08 19:07:55 +02:00
Aaron Carlisle removed their assignment 2015-07-08 19:08:23 +02:00

Added subscriber: @sindra1961

Added subscriber: @sindra1961

If you appoint the folder outside the working folder, this does not occur.

If you appoint the folder outside the working folder, this does not occur.

2.75a edition occurs in the same way, too.

2.75a edition occurs in the same way, too.
Bastien Montagne changed title from Cant clear cache after closing Blender to Cant clear temp fluid cache after closing Blender 2015-07-09 10:55:34 +02:00

This issue was referenced by 7e9c347c8c

This issue was referenced by 7e9c347c8c23b3e396b1ecfd418272c8a96a7096

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45375
No description provided.